--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-intersection-observer": "^9.5.3",
     "react-router-dom": "^6.21.3",
     "react-scripts": "5.0.1",
+    "react-select": "^5.8.0",
     "styled-components": "^6.1.8",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
