--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.72",
     "@types/react-dom": "^18.2.18",
+    "dayjs": "^1.11.10",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
+    "react-calendar": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-intersection-observer": "^9.5.3",
     "react-router": "^6.21.3",
