--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-calendar": "^4.8.0",
+    "react-datepicker": "^5.1.0",
     "react-dom": "^18.2.0",
     "react-intersection-observer": "^9.5.3",
     "react-router": "^6.21.3",
