--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^16.18.72",
     "@types/react-daum-postcode": "^1.6.1",
     "@types/react-dom": "^18.2.18",
+    "axios": "^1.6.7",
     "dayjs": "^1.11.10",
     "moment": "^2.30.1",
     "react": "^18.2.0",
